<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    android:padding="16dp"
    >
          
    
    
    <EditText android:id="@+id/edit_message_adr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message_adr"
        />

        
	  	<TextView
	  	    android:id="@+id/text1"
        	android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
       		android:text="@string/text_view1"
       		
       		
       		android:layout_below="@id/edit_message_adr"
     	    android:layout_alignParentLeft="true"
      	    android:layout_toLeftOf="@+id/text2" />
       		

    	<TextView
    	    android:id="@+id/text2"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
   		    android:text="@string/text_view2" 
   		    
   		    android:layout_below="@id/edit_message_adr"
   		    android:layout_alignParentRight="true"/>

        <EditText android:id="@+id/edit_message_1"
      	  
      	  android:layout_width="wrap_content"
      	  android:layout_height="wrap_content"
      	  android:hint="@string/edit_message"
      	  
      	  android:layout_below="@id/text1"
     	   android:layout_alignParentLeft="true" 
        />
    	
       <CheckBox
     	   android:id="@+id/box_img_1"
      	   android:layout_width="wrap_content"
    	   android:layout_height="wrap_content"
        
      	   android:layout_alignParentRight="true"
      	   android:layout_below="@id/text2"
               
      	   android:onClick="CheckImage" />
      
  
    <EditText android:id="@+id/edit_message_2"
      	 
      	  android:layout_width="wrap_content"
      	  android:layout_height="wrap_content"
      	  android:hint="@string/edit_message"
      	  
      	   android:layout_below="@id/edit_message_1"
     	   android:layout_alignParentLeft="true" 
        />
    	
       <CheckBox
     	   android:id="@+id/box_img_2"
      	   android:layout_width="wrap_content"
    	   android:layout_height="wrap_content"
        
      	   android:layout_alignParentRight="true"
      	   android:layout_below="@id/box_img_1"
               
      	   android:onClick="CheckImage" />
   

 
    <EditText android:id="@+id/edit_message_3"
      	 
      	  android:layout_width="wrap_content"
      	  android:layout_height="wrap_content"
      	  android:hint="@string/edit_message"
      	  
      	   android:layout_below="@id/edit_message_2"
     	   android:layout_alignParentLeft="true" 
        />
    	
       <CheckBox
     	   android:id="@+id/box_img_3"
      	   android:layout_width="wrap_content"
    	   android:layout_height="wrap_content"
        
      	   android:layout_alignParentRight="true"
      	   android:layout_below="@id/box_img_2"
               
      	   android:onClick="CheckImage" />
       
        <EditText android:id="@+id/edit_message_4"
      	 
      	  android:layout_width="wrap_content"
      	  android:layout_height="wrap_content"
      	  android:hint="@string/edit_message"
      	  
      	   android:layout_below="@id/edit_message_3"
     	   android:layout_alignParentLeft="true" 
        />
    	
       <CheckBox
     	   android:id="@+id/box_img_4"
      	   android:layout_width="wrap_content"
    	   android:layout_height="wrap_content"
        
      	   android:layout_alignParentRight="true"
      	   android:layout_below="@id/box_img_3"
               
      	   android:onClick="CheckImage" />
       
    <Button 
        android:id="@+id/button_send_tag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_feed"
        
        
         android:layout_alignParentRight="true"
         android:layout_below="@id/box_img_4"
        
        android:onClick="sendFeed" />
   

   

</RelativeLayout>
</ScrollView>